# 5Resources

./: .gitignore  Context_Apr7.md  Context_Mar20.md  OpusRecApr7.md  README.md  alpha_plan.md  audit_data.md  catan_design.md  catan_ds_o46.md  check.sh  enhanced.sh  headsup.sh  headsup2.sh  league3.sh  new.sh  next.sh  plan2.0-tasks.md  plan2.0.md  pyproject.toml  rbootstrap.sh  rl_deep_learning_diagram.md  rsettle.sh  run_league.sh  strats.md  test.sh  test_models.sh  trace.sh  unified_plan.md
catan_rl/: __init__.py  actions.py  bots.py  constants.py  encoding.py  env.py  eval.py  graph_features.py  rules.py  search.py  state.py  strategy_archetypes.py  strategy_metrics.py  topology.py
catan_rl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
catan_rl/training/: __init__.py  bc.py  league.py  ppo.py  self_play.py  wrappers.py
scripts/: benchmark_board_styles.py  benchmark_historical.py  benchmark_suite.py  eval_checkpoint.py  inspect_board.py  run_tournament.py  scan.py  search_distill.py  trace_game.py  train_ppo.py  train_schedule.py
tests/: test_action_mask.py  test_auxiliary_targets.py  test_awards.py  test_bots.py  test_dev_cards.py  test_encoding.py  test_env_step_info.py  test_eval_truncation.py  test_invariants.py  test_random_playout.py  test_road_network.py  test_robber.py  test_setup_phase.py  test_topology_real.py  test_trade_discard.py  test_training_rewards.py
