[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-rl"
version = "0.1.0"
description = "Catan reinforcement learning environment and training stack"
requires-python = ">=3.10"
dependencies = ["numpy", "torch"]

[tool.setuptools.packages.find]
where = ["."]
